fix unalignment

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@
 	right:40%;
 	width:40%;
 	background-color:#006363;
-	padding-bottom: 1em;
+	padding-bottom: 2.1em;
 }
 .twobut2{
 	position:absolute;
